--- a/front-end/src/app/(routes)/portfolio/page.module.scss
+++ b/front-end/src/app/(routes)/portfolio/page.module.scss
@@ -18,6 +18,7 @@
     height: 400px;
     position: relative;
     background-size: cover !important;
+    transition: border 0.5s ease;
 }
 
 
@@ -41,4 +42,10 @@
 }
 .item:hover .title{
     color: #53c28b;
+    
+}
+
+.item:hover{
+    border: 5px solid #53c28b;
+    transition: border 1s ease;
 }
