--- a/front-end/src/app/(routes)/page.module.css
+++ b/front-end/src/app/(routes)/page.module.css
@@ -31,7 +31,7 @@
 
 .title{
   font-size: 72px;
-  background: linear-gradient(to bottom,#53c28b,#bbb);
+  background: linear-gradient(to bottom,#53c28b,#afacac);
   background-clip:text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
